@@ -1,3 +1,0 @@
-[codespell]
-skip = test,pep-*.txt,iso*.txt
-ignore-words-list = ba,complies,ede,fo,hist,ist,ment,nd,ned,ninjs,ownward,ream,ro,shttp,ta,te,ue,wee,windos
